🐝 Complete MilestoneBee rebranding
- Updated app name from Little Star to MilestoneBee
- Replaced color palette: lavender/cream/mint → sage/honey/peach/mint
- Updated all brand references and messaging
- Added bee-themed taglines and copy
- Integrated new logo throughout app
- Updated button styles with new color scheme
- Modified landing page with bee theme
- Updated authentication forms branding

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "little-star-tracker",
+  "name": "milestonebee-tracker",
   "version": "1.0.0",
-  "description": "A minimalist daughter data tracking application",
+  "description": "A minimalist child development tracking application with MilestoneBee",
   "type": "module",
   "scripts": {
     "dev": "vite",
