🔧 Fix Vercel build by using npx and Node.js 20

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,10 @@
 {
   "outputDirectory": "dist",
+  "functions": {
+    "app/**/*": {
+      "runtime": "nodejs20.x"
+    }
+  },
   "rewrites": [
     {
       "source": "/(.*)",
